website: fix a footer on mobile after prev [ci skip]

--- a/docs/css/styles.scss
+++ b/docs/css/styles.scss
@@ -941,6 +941,10 @@ code {
     width: auto;
   }
 
+  .footer-content {
+    width: auto;
+  }
+
   main {
     padding-left: .8em;
     margin: 0;
